--- a/nginx/README
+++ b/nginx/README
@@ -1,5 +1,5 @@
-These ansible files, templates, etc allow for a basic nginx config, no https (yet).
+These ansible scripts allow for a basic nginx install, no https (yet).
 Special config options are available for use with a PHP-FPM fcgi backend.
 
-The setup is greatly inspired by @perusio drupal nginx config (https://github.com/perusio/drupal-with-nginx)
+The setup is greatly inspired by @perusio's Drupal-Nginx config (https://github.com/perusio/drupal-with-nginx)
 
